Wed Jun  1 19:39:08 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/include/AST_Expression.h:
        * TAO_IDL/ast/AST_Expression.cpp
        * TAO_IDL/ast/AST_Constant.cpp
        * TAO_IDL/be/be_helper.cpp:
        * TAO_IDL/be/be_visitor_constant/constant_ch.cpp:
        * TAO_IDL/be/be_visitor_constant/constant_cs.cpp:

          Added support for long double constants in IDL.

        * tests/IDL_Test/constants.idl:

          Added test cases for long double constants.

        * NEWS:

          Added item about long double constant support.

Wed Jun  1 09:46:54 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * orbsvcs/tests/AVStreams/Multicast_Full_Profile/ftp.cpp:
        * orbsvcs/tests/Log/Basic_Log_Test/client.cpp:
        * tests/ORB_Local_Config/Two_DLL_ORB/client.cpp:
        * tests/ORB_Local_Config/Two_DLL_ORB/server.cpp:
          Fixed Coverity warnings regarding uncaught exceptions.

Tue May 31 05:47:19 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Sequence_Unit_Tests/string_sequence_tester.hpp:
          Fixed gcc 4.6 warnings: variable was set but not used.

Mon May 30 10:21:08 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * examples/Logging/Logger_i.cpp:
          Resolved gcc 4.6 warning: variable may be used uninitialized
          in this function

Mon May 30 10:00:33 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * orbsvcs/LoadBalancer/LoadMonitor.cpp:
          Fixed compiler error on Windows.

Mon May 30 06:39:12 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Sequence_Unit_Tests/string_sequence_tester.hpp:
        * tests/Smart_Proxies/Benchmark/client.cpp:
          Resolved gcc 4.6 warnings: variable was set but not used.

Fri May 27 14:35:57 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_2936_Regression/bug2936.cpp:
        * tests/Bug_3926_Regression/Client_Request_Interceptor.cpp:
        * tests/Exposed_Policies/RT_Properties.cpp: