@@ -1,3 +1,11 @@
+Thu Jun  2 12:24:59 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/be/be_helper.cpp:
+
+          - Fixed print format for long double, eliminated warnings.
+          - Added '#' flag to all floating point print formats, forces
+            printing of decimal point even if not present in IDL.
+
 Wed Jun  1 19:39:08 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/include/AST_Expression.h:
